--- a/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
@@ -22,7 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="AddPart">Add Part</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="AddMake">Add Make</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="AddModel">Add Model</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -38,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Car_Parts - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.UtcNow - Car_Parts
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
