--- a/Car Parts/Car Parts/Views/Home/Index.cshtml
+++ b/Car Parts/Car Parts/Views/Home/Index.cshtml
@@ -14,11 +14,11 @@
     <div class="row mt-2 mb-4">
         @foreach (var make in Model)
         {
-            <div class=" col-6 col-xl-1 mb-5 mt-5">
+            <div class="col-6 col-xl-1 mb-5 mt-5 ml-4 mr-4" >
                 <a href="/Models/Models?make=@make.Name">
-                <img src="@make.ImageUrl"
-                     class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
-                     data-placement="bottom" title="car.Year car.Model">
+                    <img style="width:90px;max-width:90px;height:90px;max-height:90px" src="@make.ImageUrl"
+                         class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
+                         data-placement="bottom" title="car.Year car.Model">
                 </a>
             </div>
         }
