--- a/Car Parts/Car Parts/Views/Parts/AddMake.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/AddMake.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="offset-md-2 col-md-8 com-sm-12">
             <h2 class="heading-margin" text-center>Add Make</h2>
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label asp-for="Name">Name</label>
                     <input asp-for="Name" class="form-control" placeholder="Add part name...">
@@ -18,6 +18,9 @@
                     <label asp-for="ImageUrl">Image Url</label>
                     <input asp-for="ImageUrl" class="form-control" placeholder="Add image Url...">
                     <span asp-validation-for="ImageUrl" class="small text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="file" name="makeImage">
                 </div>
                 <button type="submit" class="btn btn-primary" value="Add">Add</button>
             </form>
