--- a/Car Parts/Car Parts/Views/Parts/AddMake.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/AddMake.cshtml
@@ -21,6 +21,7 @@
                 </div>
                 <div class="form-group">
                     <input type="file" name="makeImage">
+                    <span asp-validation-for="Image" class="small text-danger"></span>
                 </div>
                 <button type="submit" class="btn btn-primary" value="Add">Add</button>
             </form>
