Added new entities to the data base

--- a/Car Parts/Car Parts/Views/Parts/Categories.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/Categories.cshtml
@@ -1,4 +1,4 @@
-@model ICollection<CategoryMakeModelView>;
+@model ICollection<PartCategoryViewModel>;
 @{
     ViewData["Title"] = "Categories";
 }
