--- a/Car Parts/Car Parts/Views/Home/Index.cshtml
+++ b/Car Parts/Car Parts/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
-﻿@model ICollection<CategoryMakeModelView>;
+﻿@model ICollection<PartCategoryViewModel>;
 @{
     ViewData["Title"] = "Home Page";
 }
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Microsoft.AspNetCore.Identity;
+@using Car_Parts.Data.Models;
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <partial name="_SlideShowPartial">
     <link rel="stylesheet" href="~/css/carMenu.css">
