--- a/Car Parts/Car Parts/Views/Models/Models.cshtml
+++ b/Car Parts/Car Parts/Views/Models/Models.cshtml
@@ -1,10 +1,11 @@
-﻿@model ICollection<CategoryMakeModelView>;
+﻿@model ICollection<PartCategoryViewModel>;
 @{
     ViewData["Title"] = "Models";
 }
-@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Microsoft.AspNetCore.Identity;
+@using Car_Parts.Data.Models;
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <div class="text-center">
     <h1 class="display-4">@ViewBag.Name</h1>
