--- a/Car Parts/Car Parts/Views/Parts/ShopPage.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/ShopPage.cshtml
@@ -21,7 +21,50 @@
     <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
-<div class="row mt-5 mb-4">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+<div class="container">
+    <div class="row clearfix">
+        @foreach (var part in Model.Parts)
+        {
+            <div class="col-lg-3 col-md-4 col-sm-12 mt-3 mb-3" style="display:table;width:100%">
+                <div class="card product_item" style="display:table-cell">
+                    <div class="body">
+                        <div class="cp_img">
+                            <img style="width: 200px; max-width: 200px; height: 200px; max-height: 200px "
+                                 src="@part.ImageUrl" alt="Product" class="img-fluid">
+                        </div>
+                        <div class="product_details">
+                            <h5>
+                                <a asp-controller="Parts"
+                                   asp-action="Info"
+                                   asp-route-id="@part.Id">@part.Name</a>
+                            </h5>
+                            <ul class="product_price list-unstyled">
+                                <li class="old_price">Quantity:@part.Quantity</li>
+                                <li class="new_price">Price: @part.Price$</li>
+                            </ul>
+                        </div>
+                        <a asp-controller="Parts" asp-action="Info" asp-route-id="@part.Id" class="btn btn-block btn-primary">Part Info</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<!--
+<div class="row col-12 mt-5 mb-4">
     @if (!Model.Parts.Any())
     {
         <h3>There are no part for the given model</h3>
@@ -30,10 +73,10 @@
     {
         @foreach (var part in Model.Parts)
         {
-            <div class="card col-6 col-lg-3 mr-2 game-card">
+            <div class="card col-6 col-lg-3 mr-2 mb-2">
                 <img src="@part.ImageUrl"
                      class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
-                     data-placement="bottom" title="car.Year car.Model">
+                     data-placement="bottom" title="@part.Name">
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item text-center">@part.Name</li>
@@ -45,7 +88,7 @@
         }
     }
 </div>
-
+    -->
 @{
     var previousPage = Model.CurrentPage - 1;
     if (previousPage < 1)
@@ -55,6 +98,7 @@
 
     var maxPages = Math.Ceiling((double)Model.TotalParts / AllPartsViewModel.PartsPerPage);
 }
+
 
 <div class="row">
     <div class="col-md-6">
