added Admin authorization

--- a/Car Parts/Car Parts/Views/Home/Index.cshtml
+++ b/Car Parts/Car Parts/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ICollection<PartCategoryViewModel>;
 @{
-    ViewData["Title"] = "Home Page";
+    ViewBag.Title = "Home Page";
 }
 @using Microsoft.AspNetCore.Identity;
 @using Car_Parts.Data.Models;
