--- a/Car Parts/Car Parts/Views/_ViewImports.cshtml
+++ b/Car Parts/Car Parts/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Car_Parts
 @using Car_Parts.Models
 @using Car_Parts.Models.Parts
+@using Car_Parts.Models.Admins
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
