--- a/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
@@ -29,10 +29,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="AddPart">Add Part</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="AddMake">Add Make</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Makes" asp-action="AddMake">Add Make</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="AddModel">Add Model</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Models" asp-action="AddModel">Add Model</a>
                             </li>
                         }
                     </ul>
