--- a/Car Parts/Car Parts/Views/Models/Models.cshtml
+++ b/Car Parts/Car Parts/Views/Models/Models.cshtml
@@ -24,7 +24,7 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-center">@modelModel.Name</li>
             </ul>
-            <a asp-controller="Parts" asp-action="Categories" asp-route-Make="@ViewBag.Name" asp-route-Model="@modelModel.Name" class="btn btn-block btn-primary">Products Categories</a>
+            <a asp-controller="Shop" asp-action="Categories" asp-route-Make="@ViewBag.Name" asp-route-Model="@modelModel.Name" class="btn btn-block btn-primary">Products Categories</a>
         </div>
     </div>
   }
