--- a/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
+++ b/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
@@ -6,7 +6,7 @@
     <h1 class="display-4">Parts</h1>
 </div>
 
-<div class="container mb-3">
+<div class="container">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/ShopPage.css">
@@ -17,53 +17,43 @@
     <input type="hidden" asp-for="Model" value="@Model.Model" />
     <input type="hidden" asp-for="Category" value="@Model.Category" />
     <input asp-for="SearchTerm" type="text" placeholder="Search...">
-    <input type="hidden" asp-for="CurrentPage" value="1" />
     <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
+@{
+    var previousPage = Model.CurrentPage - 1;
+    if (previousPage < 1)
+    {
+        previousPage = 1;
+    }
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-<div class="container">
-    <div class="row clearfix">
-        @foreach (var part in Model.Parts)
-        {
-            <div class="col-lg-3 col-md-4 col-sm-12 mt-3 mb-3" style="display:table;width:100%">
-                <div class="card product_item" style="display:table-cell">
-                    <div class="body">
-                        <div class="cp_img">
-                            <img style="width: 200px; max-width: 200px; height: 200px; max-height: 200px "
-                                 src="@part.ImageUrl" alt="Product" class="img-fluid">
-                        </div>
-                        <div class="product_details">
-                            <h5>
-                                <a asp-controller="Parts"
-                                   asp-action="Info"
-                                   asp-route-id="@part.Id">@part.Name</a>
-                            </h5>
-                            <ul class="product_price list-unstyled">
-                                <li class="old_price">Quantity:@part.Quantity</li>
-                                <li class="new_price">Price: @part.Price$</li>
-                            </ul>
-                        </div>
-                        <a asp-controller="Part" asp-action="Info" asp-route-id="@part.Id" class="btn btn-block btn-primary">Part Info</a>
-                    </div>
-                </div>
-            </div>
-        }
+    var maxPages = Math.Ceiling((double)Model.TotalParts / AllPartsViewModel.PartsPerPage);
+}
+
+<div class="row mt-3">
+    <div class="col-md-6">
+        <a class="btn btn-primary @(Model.CurrentPage==1?"disabled":string.Empty)"
+           asp-controller="Shop"
+           asp-action="ShopPage"
+           asp-route-Make="@Model.Make"
+           asp-route-Model="@Model.Model"
+           asp-route-Category="@Model.Category"
+           asp-route-SearchTerm="@Model.SearchTerm"
+           asp-route-CurrentPage="@previousPage"><<</a>
+    </div>
+
+    <div class="col-md-6">
+        <a class="btn btn-primary float-right @(Model.CurrentPage==maxPages?"disabled":string.Empty)"
+           asp-controller="Shop"
+           asp-action="ShopPage"
+           asp-route-Make="@Model.Make"
+           asp-route-Model="@Model.Model"
+           asp-route-Category="@Model.Category"
+           asp-route-SearchTerm="@Model.SearchTerm"
+           asp-route-CurrentPage="@(Model.CurrentPage+1)">>></a>
     </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-<!--
 <div class="row col-12 mt-5 mb-4">
     @if (!Model.Parts.Any())
     {
@@ -73,7 +63,7 @@
     {
         @foreach (var part in Model.Parts)
         {
-            <div class="card col-6 col-lg-3 mr-2 mb-2">
+            <div class="card col-9 col-lg-3 ml-5 mr-4 mb-2">
                 <img src="@part.ImageUrl"
                      class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
                      data-placement="bottom" title="@part.Name">
@@ -88,39 +78,29 @@
         }
     }
 </div>
-    -->
-
-@{
-    var previousPage = Model.CurrentPage - 1;
-    if (previousPage < 1)
-    {
-        previousPage = 1;
-    }
-
-    var maxPages = Math.Ceiling((double)Model.TotalParts / AllPartsViewModel.PartsPerPage);
-}
 
 
-<div class="row">
+
+<div class="row mt-3">
     <div class="col-md-6">
-        <a class="btn btn-primary"
+        <a class="btn btn-primary @(Model.CurrentPage==1?"disabled":string.Empty)"
            asp-controller="Shop"
            asp-action="ShopPage"
            asp-route-Make="@Model.Make"
            asp-route-Model="@Model.Model"
            asp-route-Category="@Model.Category"
-           asp-route-SearchTern="@Model.SearchTerm"
+           asp-route-SearchTerm="@Model.SearchTerm"
            asp-route-CurrentPage="@previousPage"><<</a>
     </div>
 
     <div class="col-md-6">
-        <a class="btn btn-primary float-right"
+        <a class="btn btn-primary float-right @(Model.CurrentPage==maxPages?"disabled":string.Empty)"
            asp-controller="Shop"
            asp-action="ShopPage"
            asp-route-Make="@Model.Make"
            asp-route-Model="@Model.Model"
            asp-route-Category="@Model.Category"
-
+           asp-route-SearchTerm="@Model.SearchTerm"
            asp-route-CurrentPage="@(Model.CurrentPage+1)">>></a>
     </div>
 </div>
