--- a/Car Parts/Car Parts/Views/Parts/AddPart.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/AddPart.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="offset-md-2 col-md-8 com-sm-12">
+        <div class="offset-md-2 col-md-8 com-sm-12 mb-5">
             <h2 class="heading-margin" text-center>Add Part</h2>
             <form method="post">
                 <div class="form-group">
@@ -20,14 +20,9 @@
                     <span asp-validation-for="ImageUrl" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="MakeId">Make</label>
-                    <select asp-for="MakeId" class="form-control">
-                        @foreach (var make in Model.Makes)
-                        {
-                            <option value="@make.Id">@make.Name</option>
-                        }
-                    </select>
-                    <span asp-validation-for="MakeId" class="small text-danger"></span>
+                    <label asp-for="MakeName">Make</label>
+                    <input asp-for="MakeName" class="form-control"  value="@Model.MakeName" readonly>
+                    <span asp-validation-for="MakeName" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ModelId">Model</label>
