--- a/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Car_Parts</a>
+
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Car Parts</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,7 +28,7 @@
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="AddPart">Add Part</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="ChooseMake">Add Part</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Makes" asp-action="AddMake">Add Make</a>
@@ -49,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.UtcNow - Car_Parts
+            &copy; @DateTime.UtcNow.Year - Car Parts by Pascal Atanasov
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
