--- a/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
+++ b/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
@@ -6,10 +6,11 @@
     <h1 class="display-4">Parts</h1>
 </div>
 
+
 <div class="container">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/css/ShopPage.css">
+    <!--<link rel="stylesheet" href="~/css/ShopPage.css">-->
 </div>
 
 <form method="get" class="example" asp-controller="Shop" asp-action="ShopPage">
@@ -29,7 +30,6 @@
 
     var maxPages = Math.Ceiling((double)Model.TotalParts / AllPartsViewModel.PartsPerPage);
 }
-
 <div class="row mt-3">
     <div class="col-md-6">
         <a class="btn btn-primary @(Model.CurrentPage==1?"disabled":string.Empty)"
@@ -43,7 +43,7 @@
     </div>
 
     <div class="col-md-6">
-        <a class="btn btn-primary float-right @(Model.CurrentPage==maxPages?"disabled":string.Empty)"
+        <a class="btn btn-primary float-right @(Model.CurrentPage>=maxPages?"disabled":string.Empty)"
            asp-controller="Shop"
            asp-action="ShopPage"
            asp-route-Make="@Model.Make"
@@ -54,10 +54,14 @@
     </div>
 </div>
 
+
+
+
 <div class="row col-12 mt-5 mb-4">
     @if (!Model.Parts.Any())
     {
         <h3>There are no part for the given model</h3>
+
     }
     else
     {
@@ -94,7 +98,7 @@
     </div>
 
     <div class="col-md-6">
-        <a class="btn btn-primary float-right @(Model.CurrentPage==maxPages?"disabled":string.Empty)"
+        <a class="btn btn-primary float-right @(Model.CurrentPage>=maxPages?"disabled":string.Empty)"
            asp-controller="Shop"
            asp-action="ShopPage"
            asp-route-Make="@Model.Make"
