--- a/Car Parts/Car Parts/Views/Models/AddModel.cshtml
+++ b/Car Parts/Car Parts/Views/Models/AddModel.cshtml
@@ -11,7 +11,7 @@
             <form method="post">
                 <div class="form-group">
                     <label asp-for="Name">Name</label>
-                    <input asp-for="Name" class="form-control" placeholder="Add part name...">
+                    <input asp-for="Name" class="form-control" placeholder="Add model name...">
                     <span asp-validation-for="Name" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
