--- a/Car Parts/Car Parts/Views/Offers/MyOffers.cshtml
+++ b/Car Parts/Car Parts/Views/Offers/MyOffers.cshtml
@@ -9,17 +9,31 @@
             <th scope="col">Price</th>
             <th scope="col">Quantity</th>
             <th scope="col">Info</th>
+            <th scope="col">Delete</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var part in Model)
         {
-            <tr>
-                <td>@part.Name</td>
-                <td>@part.Price</td>
-                <td>@part.Quantity</td>
-                <td><a asp-controller="Parts" asp-action="Info" asp-route-id="@part.Id" class="btn btn-info">Info</a></td>
-            </tr>
+        <tr>
+            <td>@part.Name</td>
+            <td>@part.Price</td>
+            <td>@part.Quantity</td>
+            <td>
+                <a type="button" class="btn btn-success"
+                   asp-controller="Parts"
+                   asp-action="Edit"
+                   asp-route-PartId="@part.Id"
+                   a>Edit</a>
+            </td>
+            <td>
+                <a type="button" class="btn btn-danger"
+                   asp-controller="Parts"
+                   asp-action="Delete"
+                   asp-route-PartId="@part.Id"
+                   a>Delete</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
