--- a/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Offers" asp-action="MyOffers" title="Manage">My Offers</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="MyParts" title="Manage">My Parts</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
