--- a/Car Parts/Car Parts/Views/Parts/Info.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/Info.cshtml
@@ -1,22 +1,11 @@
-﻿@model Part;
+﻿@model AddOfferFormModel;
 @{
-    ViewData["Title"] = "Info";
+    ViewBag.Title = "Info for part:";
 }
-@using Car_Parts.Data.Models;
 
 
-<style>
-    .float-container {
-        float: left;
-    }
-
-    .float-child {
-        width: 72%;
-        float: right;
-    }
-</style>
 <div class="text-center">
-    <h1 class="display-4">Info for part:</h1>
+    <h1 class="display-4">@ViewBag.Title</h1>
 </div>
 
 
@@ -38,37 +27,40 @@
 
 
         <div style="width: 50rem; margin-bottom: 100px;margin-left:50px">
-            <form>
+            <form method="post">
                 <div class="form-row">
+                    <input asp-for="Id" placeholder="@Model.Id" hidden readonly>
                     <div class="form-group col-md-6">
-                        <label for="inputEmail4">Name</label>
-                        <input type="text" class="form-control" id="inputEmail4" placeholder="Enter your name...">
+                        <label asp-for="BuyerName">Name</label>
+                        <input asp-for="BuyerName" class="form-control" placeholder="Enter your name...">
+                        <span asp-validation-for="BuyerName" class="small text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Enter your email...">
+                        <label asp-for="Email">Email</label>
+                        <input asp-for="Email" class="form-control" placeholder="Enter your Email...">
+                        <span asp-validation-for="Email" class="small text-danger"></span>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">Phone</label>
-                        <input type="text" class="form-control" id="inputPassword4" placeholder="Enter your phone...">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="inputPassword4">Part Identity (for the seller)</label>
-                        <input type="text" class="form-control" id="inputPassword4" placeholder="@Model.Id" readonly>
+                        <label asp-for="Phone">Phone</label>
+                        <input asp-for="Phone" class="form-control" placeholder="Enter your phone number...">
+                        <span asp-validation-for="Phone" class="small text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputAddress">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="Enter your adress...">
+                    <label asp-for="Address">Address</label>
+                    <input asp-for="Address" class="form-control" placeholder="Enter your address...">
+                    <span asp-validation-for="Address" class="small text-danger"></span>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="inputCity">City</label>
-                        <input type="text" class="form-control" id="inputCity" placeholder="Enter your city...">
+                        <label asp-for="City">City</label>
+                        <input asp-for="City" class="form-control" placeholder="Enter your city...">
+                        <span asp-validation-for="City" class="small text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
-                        <label for="inputZip">Zip</label>
-                        <input type="text" class="form-control" id="inputZip" placeholder="Enter your zip code...">
+                        <label asp-for="Zip">Zip</label>
+                        <input asp-for="Zip" class="form-control" placeholder="Enter your zip code...">
+                        <span asp-validation-for="Zip" class="small text-danger"></span>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Order</button>
