--- a/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
@@ -16,6 +16,9 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="MyParts" title="Manage">My Parts</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Offers" asp-action="MyOffers" title="Manage">My Offers</a>
+        </li>
+        <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
