--- a/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
+++ b/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
@@ -75,8 +75,15 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item text-center">@part.Name</li>
                     </ul>
-                    <p style="margin:auto;margin-top:15px">Quantity:@part.Quantity</p><p style="margin:auto;margin-bottom:15px">Price:@part.Price $</p>
-                    <a asp-controller="Parts" asp-action="Info" asp-route-id="@part.Id" class="btn btn-block btn-primary">Part Info</a>
+                    <p style="margin:auto;margin-top:15px">Quantity: @part.Quantity</p><p style="margin:auto;margin-bottom:15px">Price: @part.Price$</p>
+                    @if (part.IsSeller)
+                    {
+                        <a asp-controller="Parts" asp-action="Edit" asp-route-id="@part.Id" class="btn btn-success">Edit</a>
+                    }
+                    else
+                    {
+                        <a asp-controller="Parts" asp-action="Info" asp-route-PartId="@part.Id" class="btn btn-block btn-primary">Part Info</a>
+                    }
                 </div>
             </div>
         }
