--- a/Car Parts/Car Parts/Views/Home/Index.cshtml
+++ b/Car Parts/Car Parts/Views/Home/Index.cshtml
@@ -9,18 +9,17 @@
 
 <partial name="_SlideShowPartial">
     <link rel="stylesheet" href="~/css/carMenu.css">
-    <h1 style="text-align:center">Choose car make:</h1>
+    <h1 style="text-align:center">Choose car make: </h1>
 
 
     <div class="row mt-2 mb-4">
         @foreach (var make in Model)
         {
-            <div class="col-6 col-xl-1 mb-5 mt-5 ml-4 mr-4" >
-                <a asp-controller="Models" asp-action="Models" asp-route-Make="@make.Name">
-                    <img style="width:90px;max-width:90px;height:90px;max-height:90px" src="@make.ImageUrl"
-                         class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
-                         data-placement="bottom" title="car.Year car.Model">
-                </a>
-            </div>
-        }
+<div class="col-6 col-xl-1 mb-5 mt-5 ml-4 mr-4">
+    <a asp-controller="Models" asp-action="Models" asp-route-Make="@make.Name">
+        <img style="width:90px;max-width:90px;height:90px;max-height:90px" src="@make.ImageUrl"
+             class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
+             data-placement="bottom" title="car.Year car.Model">
+    </a>
+</div>}
     </div>
