Added AutoValidateAntiforgeryToken to forms to boost protection

--- a/Car Parts/Car Parts/Views/Admins/Become.cshtml
+++ b/Car Parts/Car Parts/Views/Admins/Become.cshtml
@@ -15,7 +15,7 @@
                     <input asp-for="Name" class="form-control" placeholder="Enter your name...">
                     <span asp-validation-for="Name" class="small text-danger"></span>
                 </div>
-                <button type="submit" class="btn btn-primary" value="Add">Become Admin!</button>
+                <button type="submit" class="btn btn-primary" value="Become">Become Admin!</button>
             </form>
         </div>
     </div>
