--- a/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_Layout.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Car_Parts.Data.Models
+@using Car_Parts.Services.Admins
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject IAdminsService Admins;
 
 <!DOCTYPE html>
 <html lang="en">
@@ -28,14 +30,11 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if (SignInManager.IsSignedIn(User))
                         {
+                            var userId = User.GetId();
+                            var isUserAdmin = Admins.IsAdmin(userId);
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="ChooseMake">Add Part</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Makes" asp-action="AddMake">Add Make</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Models" asp-action="AddModel">Add Model</a>
                             </li>
                         }
                     </ul>
