--- a/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
+++ b/Car Parts/Car Parts/Views/Shop/ShopPage.cshtml
@@ -1,7 +1,8 @@
-﻿@model AllPartsViewModel;
-@{
-    ViewData["Title"] = "Shop Page";
-}
+﻿@using Car_Parts.Services.Admins
+@inject IAdminsService Admins
+@model AllPartsViewModel
+@{ ViewData["Title"] = "Shop Page";
+                var userIsAdmin = Admins.IsAdmin(User.GetId()); }
 <div class="text-center">
     <h1 class="display-4">Parts</h1>
 </div>
@@ -10,7 +11,7 @@
 <div class="container">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/css/ShopPage.css">
+    <link rel="stylesheet" href="~/css/shopPage.css">
 </div>
 
 <form method="get" class="example" asp-controller="Shop" asp-action="ShopPage">
@@ -21,15 +22,13 @@
     <button type="submit"><i class="fa fa-search"></i></button>
 </form>
 
-@{
-    var previousPage = Model.CurrentPage - 1;
+@{ var previousPage = Model.CurrentPage - 1;
     if (previousPage < 1)
     {
         previousPage = 1;
     }
 
-    var maxPages = Math.Ceiling((double)Model.TotalParts / AllPartsViewModel.PartsPerPage);
-}
+    var maxPages = Math.Ceiling((double)Model.TotalParts / AllPartsViewModel.PartsPerPage); }
 <div class="row mt-3">
     <div class="col-md-6">
         <a class="btn btn-primary @(Model.CurrentPage==1?"disabled":string.Empty)"
@@ -60,34 +59,28 @@
 <div class="row col-12 mt-5 mb-4">
     @if (!Model.Parts.Any())
     {
-        <h3>There are no part for the given model</h3>
-
-    }
-    else
-    {
-        @foreach (var part in Model.Parts)
+<h3>There are no part for the given model</h3> }
+else
+{
+@foreach (var part in Model.Parts)
+{
+<div class="card col-9 col-lg-3 ml-5 mr-4 mb-2">
+    <img src="@part.ImageUrl"
+         class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
+         data-placement="bottom" title="@part.Name">
+    <div class="card-body">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item text-center">@part.Name</li>
+        </ul>
+        <p style="margin:auto;margin-top:15px">Quantity: @part.Quantity</p><p style="margin:auto;margin-bottom:15px">Price: @part.Price$</p>
+        @if (part.IsSeller || userIsAdmin)
         {
-            <div class="card col-9 col-lg-3 ml-5 mr-4 mb-2">
-                <img src="@part.ImageUrl"
-                     class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
-                     data-placement="bottom" title="@part.Name">
-                <div class="card-body">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item text-center">@part.Name</li>
-                    </ul>
-                    <p style="margin:auto;margin-top:15px">Quantity: @part.Quantity</p><p style="margin:auto;margin-bottom:15px">Price: @part.Price$</p>
-                    @if (part.IsSeller)
-                    {
-                        <a asp-controller="Parts" asp-action="Edit" asp-route-PartId="@part.Id" class="btn btn-success">Edit</a>
-                    }
-                    else
-                    {
-                        <a asp-controller="Parts" asp-action="Info" asp-route-PartId="@part.Id" class="btn btn-block btn-primary">Part Info</a>
-                    }
-                </div>
-            </div>
-        }
-    }
+<a asp-controller="Parts" asp-action="Edit" asp-route-PartId="@part.Id" class="btn btn-success">Edit</a> }
+        else
+        {
+<a asp-controller="Parts" asp-action="Info" asp-route-PartId="@part.Id" class="btn btn-block btn-primary">Part Info</a>}
+    </div>
+</div>}}
 </div>
 
 
