Added admin business login into services

--- a/Car Parts/Car Parts/Views/Admins/EditModel.cshtml
+++ b/Car Parts/Car Parts/Views/Admins/EditModel.cshtml
@@ -19,7 +19,7 @@
         </div>
 
         <div class=" col-md-8 com-sm-12">
-            <h2 class="heading-margin" text-center>Add Model</h2>
+            <h2 class="heading-margin" text-center>@ViewBag.Title</h2>
             <form method="post">
                 <input asp-for="Id" value="@Model.Id" readonly hidden>
                 <div class="form-group">
