--- a/Car Parts/Car Parts/Views/Parts/AddPart.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/AddPart.cshtml
@@ -35,7 +35,7 @@
                     <span asp-validation-for="ModelId" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="CategoryId">Model</label>
+                    <label asp-for="CategoryId">Category</label>
                     <select asp-for="CategoryId" class="form-control">
                         @foreach (var carCategory in Model.Categories)
                         {
