--- a/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
@@ -18,9 +18,9 @@
     <div class="dropdown nav-link text-dark">
         <a class="dropbtn">Admin Panel</a>
         <div class="dropdown-content">
-            <a asp-controller="Makes" asp-action="AddMake">Add Make</a>
+            <a asp-controller="Admins" asp-action="AddMake">Add Make</a>
             <a asp-controller="Admins" asp-action="EditMakes">Edit Makes</a>
-            <a asp-controller="Models" asp-action="AddModel">Add Model</a>
+            <a asp-controller="Admins" asp-action="AddModel">Add Model</a>
             <a asp-controller="Admins" asp-action="EditModels">Edit Models</a>
             <a asp-controller="Admins" asp-action="UsersParts">Edit Parts</a>
         </div>
