--- a/Car Parts/Car Parts/Views/_ViewImports.cshtml
+++ b/Car Parts/Car Parts/Views/_ViewImports.cshtml
@@ -3,5 +3,5 @@
 @using Car_Parts.Models
 @using Car_Parts.Models.Parts
 @using Car_Parts.Models.Offers
-@using Car_Parts.Models.Admins
+@using Car_Parts.Areas.Admins.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
