--- a/Car Parts/Car Parts/Views/Admins/Become.cshtml
+++ b/Car Parts/Car Parts/Views/Admins/Become.cshtml
@@ -1,8 +1,6 @@
 @model AddAdminFormModel
 
-@{
-    ViewBag.Title = "Become an Admin";
-}
+@{ ViewBag.Title = "Become an Admin"; }
 
 <div class="container">
     <div class="row">
