--- a/Car Parts/Car Parts/Views/Admins/EditPart.cshtml
+++ b/Car Parts/Car Parts/Views/Admins/EditPart.cshtml
@@ -32,7 +32,8 @@
                     <select asp-for="CategoryId" class="form-control">
                         @foreach (var carCategory in Model.Categories)
                         {
-            <option value="carCategory.Id">@carCategory.Name</option>}
+            <option value="carCategory.Id">@carCategory.Name</option>
+}
                     </select>
                     <span asp-validation-for="CategoryId" class="small text-danger"></span>
                 </div>
