--- a/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
+++ b/Car Parts/Car Parts/Views/Shared/_LoginPartial.cshtml
@@ -18,11 +18,11 @@
     <div class="dropdown nav-link text-dark">
         <a class="dropbtn">Admin Panel</a>
         <div class="dropdown-content">
-            <a asp-controller="Admins" asp-action="AddMake">Add Make</a>
-            <a asp-controller="Admins" asp-action="EditMakes">Edit Makes</a>
-            <a asp-controller="Admins" asp-action="AddModel">Add Model</a>
-            <a asp-controller="Admins" asp-action="EditModels">Edit Models</a>
-            <a asp-controller="Admins" asp-action="UsersParts">Edit Parts</a>
+            <a asp-controller="Admins"  asp-action="AddMake">Add Make</a>
+            <a asp-controller="Admins"  asp-action="EditMakes">Edit Makes</a>
+            <a asp-controller="Admins"  asp-action="AddModel">Add Model</a>
+            <a asp-controller="Admins"  asp-action="EditModels">Edit Models</a>
+            <a asp-controller="Admins"  asp-action="UsersParts">Edit Parts</a>
         </div>
     </div>
 </li> }
@@ -30,10 +30,10 @@
     <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Parts" asp-action="MyParts" title="Manage">My Parts</a>
+                    <a class="nav-link text-dark"  asp-controller="Parts" asp-action="MyParts" title="Manage">My Parts</a>
                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Offers" asp-action="MyOffers" title="Manage">My Offers</a>
+                                    <a class="nav-link text-dark"  asp-controller="Offers" asp-action="MyOffers" title="Manage">My Offers</a>
                                 </li>
                                                 <li class="nav-item">
                                                     <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
