Another unsuccessful attempt to add  MyTested.AspNetCore.Mvc to my project :(

--- a/Car Parts/Car Parts/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Car Parts/Car Parts/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -20,5 +20,6 @@
 {		 	
 <a type="button" class="btn btn-success"
    asp-controller="Admins"
+   asp-area=""
    asp-action="Become">Become Admin</a>
 }
