--- a/Car Parts/Car Parts/Views/Parts/Edit.cshtml
+++ b/Car Parts/Car Parts/Views/Parts/Edit.cshtml
@@ -26,7 +26,7 @@
                     <span asp-validation-for="MakeName" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="ModelName">Make</label>
+                    <label asp-for="ModelName">Model</label>
                     <input asp-for="ModelName" class="form-control" readonly>
                     <span asp-validation-for="ModelName" class="small text-danger"></span>
                 </div>
