--- a/CarParts/CarParts/Views/Shop/Categories.cshtml
+++ b/CarParts/CarParts/Views/Shop/Categories.cshtml
@@ -1,10 +1,8 @@
 @model ICollection<PartCategoryViewModel>;
-@{
-    ViewData["Title"] = "Categories";
-}
+@{ ViewBag.Title = "Categories"; }
 
 <div class="text-center">
-    <h1 class="display-4">Categories</h1>
+    <h1 class="display-4">@ViewBag.Title</h1>
 </div>
 
 
@@ -13,18 +11,18 @@
     <div class="row mt-5 mb-5">
         @foreach (var category in Model)
         {
-            <div class="card col-6 col-lg-2 mr-4">
-                <a asp-controller="Shop" 
-                   asp-action="ShopPage" 
-                   asp-route-Make="@ViewBag.Make" 
-                   asp-route-Model="@ViewBag.Model"
-                   asp-route-Year="@ViewBag.Year"
-                   asp-route-Category="@category.Name">
-                    <img style="width: 150px; max-width: 150px; height: 150px; max-height: 150px " src="@category.ImageUrl"
-                         class="card-img-top img-fluid card-image rounded" data-toggle="tooltip"
-                         data-placement="bottom" title="@category.Name">
-                </a>
-            </div>
-        }
+<div class=" col-6 col-lg-2 mr-4">
+    <a asp-controller="Shop"
+       asp-action="ShopPage"
+       asp-route-Make="@ViewBag.Make"
+       asp-route-Model="@ViewBag.Model"
+       asp-route-Year="@ViewBag.Year"
+       asp-route-Category="@category.Name">
+        <img style="width: 150px; max-width: 150px; height: 150px; max-height: 150px " src="~/Images/Car/CarPartsCategories/@category.ImageUrl"
+             data-toggle="tooltip"
+             data-placement="bottom" title="@category.Name">
+        <p style="text-align:center">@category.Name<p>
+    </a>
+</div>}
     </div>
 </section>
