--- a/CarParts/CarParts/Views/Admins/EditPart.cshtml
+++ b/CarParts/CarParts/Views/Admins/EditPart.cshtml
@@ -39,17 +39,17 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Price">Price</label>
-                    <input asp-for="Price" class="form-control" placeholder="Add part price...">
+                    <input asp-for="Price" class="form-control" placeholder="Edit part price...">
                     <span asp-validation-for="Price" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Quantity">Quantity</label>
-                    <input asp-for="Quantity" min="1" max="100" class="form-control" placeholder="Add part quantity...">
+                    <input asp-for="Quantity" min="1" max="100" class="form-control" placeholder="Edit part quantity...">
                     <span asp-validation-for="Quantity" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Description">Description</label>
-                    <textarea asp-for="Description" class="form-control" rows="3" placeholder="Add description..."></textarea>
+                    <textarea asp-for="Description" class="form-control" rows="3" placeholder="Edit description..."></textarea>
                     <span asp-validation-for="Description" class="small text-danger"></span>
                 </div>
                 <button type="submit" class="btn btn-success" value="Edit">Edit</button>
