--- a/CarParts/CarParts/Views/Parts/Edit.cshtml
+++ b/CarParts/CarParts/Views/Parts/Edit.cshtml
@@ -12,12 +12,12 @@
                 <input asp-for="Id" value="@Model.Id" hidden readonly>
                 <div class="form-group">
                     <label asp-for="Name">Name</label>
-                    <input asp-for="Name" class="form-control" placeholder="Add part name...">
+                    <input asp-for="Name" class="form-control" placeholder="Edit part name...">
                     <span asp-validation-for="Name" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="ImageUrl">Image Url</label>
-                    <input asp-for="ImageUrl" class="form-control" placeholder="Add image Url...">
+                    <input asp-for="ImageUrl" class="form-control" placeholder="Edit image Url...">
                     <span asp-validation-for="ImageUrl" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -42,17 +42,17 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Price">Price</label>
-                    <input asp-for="Price" class="form-control" placeholder="Add part price...">
+                    <input asp-for="Price" class="form-control" placeholder="Edit part price...">
                     <span asp-validation-for="Price" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Quantity">Quantity</label>
-                    <input asp-for="Quantity" min="1" max="100" class="form-control" placeholder="Add part quantity...">
+                    <input asp-for="Quantity" min="1" max="100" class="form-control" placeholder="v part quantity...">
                     <span asp-validation-for="Quantity" class="small text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Description">Description</label>
-                    <textarea asp-for="Description" class="form-control" rows="3" placeholder="Add description..."></textarea>
+                    <textarea asp-for="Description" class="form-control" rows="3" placeholder="Edit description..."></textarea>
                     <span asp-validation-for="Description" class="small text-danger"></span>
                 </div>
                 <button type="submit" class="btn btn-success" value="Add">Edit</button>
